@@ -40,7 +40,7 @@
 		<property name="plugins.datatype-xml" value="${extensions}/datatype-xml" />
 		<property name="plugins.datatype-raw" value="${extensions}/datatype-raw" />
 		<property name="plugins.datatype-json" value="${extensions}/datatype-json" />
-		
+
 		<!-- plugins -->
 		<property name="plugins.directoryresource" value="${extensions}/directoryresource" />
 		<property name="plugins.dashboardstatus" value="${extensions}/dashboardstatus" />
@@ -108,7 +108,7 @@
 		</copy>
 	</target>
 
-	
+
 	<target name="create-crypto" depends="compile">
 		<jar destfile="${setup.server.lib}/${crypto.jar}" basedir="${classes}">
 			<include name="com/mirth/commons/encryption/**" />
@@ -457,7 +457,7 @@
 			<include name="com/mirth/connect/plugins/datatypes/delimited/DelimitedBatchAdaptor.class" />
 			<include name="com/mirth/connect/plugins/datatypes/delimited/DelimitedBatchReader.class" />
 		</jar>
-		
+
 		<!-- plugins.datatype-dicom -->
 		<mkdir dir="${plugins.datatype-dicom}" />
 		<copy todir="${plugins.datatype-dicom}">
@@ -475,8 +475,8 @@
 		<jar destfile="${plugins.datatype-dicom}/datatype-dicom-server.jar" basedir="${classes}">
 			<include name="com/mirth/connect/plugins/datatypes/dicom/DICOMDataTypeServerPlugin.class" />
 		</jar>
-		
-		
+
+
 		<!-- plugins.datatype-edi -->
 		<mkdir dir="${plugins.datatype-edi}" />
 		<copy todir="${plugins.datatype-edi}">
@@ -498,7 +498,7 @@
 		<jar destfile="${plugins.datatype-edi}/datatype-edi-server.jar" basedir="${classes}">
 			<include name="com/mirth/connect/plugins/datatypes/edi/EDIDataTypeServerPlugin.class" />
 		</jar>
-		
+
 		<!-- plugins.datatype-hl7v2 -->
 		<mkdir dir="${plugins.datatype-hl7v2}" />
 		<copy todir="${plugins.datatype-hl7v2}">
@@ -518,7 +518,7 @@
 			<include name="com/mirth/connect/plugins/datatypes/hl7v2/HL7v2DataTypeServerPlugin.class" />
 			<include name="com/mirth/connect/plugins/datatypes/hl7v2/HL7v2BatchAdaptor.class" />
 		</jar>
-		
+
 		<!-- plugins.datatype-hl7v3 -->
 		<mkdir dir="${plugins.datatype-hl7v3}" />
 		<copy todir="${plugins.datatype-hl7v3}">
@@ -536,7 +536,7 @@
 		<jar destfile="${plugins.datatype-hl7v3}/datatype-hl7v3-server.jar" basedir="${classes}">
 			<include name="com/mirth/connect/plugins/datatypes/hl7v3/HL7V3DataTypeServerPlugin.class" />
 		</jar>
-		
+
 		<!-- plugins.datatype-ncpdp -->
 		<mkdir dir="${plugins.datatype-ncpdp}" />
 		<copy todir="${plugins.datatype-ncpdp}">
@@ -554,7 +554,7 @@
 		<jar destfile="${plugins.datatype-ncpdp}/datatype-ncpdp-server.jar" basedir="${classes}">
 			<include name="com/mirth/connect/plugins/datatypes/ncpdp/NCPDPDataTypeServerPlugin.class" />
 		</jar>
-		
+
 		<!-- plugins.datatype-xml -->
 		<mkdir dir="${plugins.datatype-xml}" />
 		<copy todir="${plugins.datatype-xml}">
@@ -572,7 +572,7 @@
 		<jar destfile="${plugins.datatype-xml}/datatype-xml-server.jar" basedir="${classes}">
 			<include name="com/mirth/connect/plugins/datatypes/xml/XMLDataTypeServerPlugin.class" />
 		</jar>
-		
+
 		<!-- plugins.datatype-raw -->
 		<mkdir dir="${plugins.datatype-raw}" />
 		<copy todir="${plugins.datatype-raw}">
@@ -590,7 +590,7 @@
 		<jar destfile="${plugins.datatype-raw}/datatype-raw-server.jar" basedir="${classes}">
 			<include name="com/mirth/connect/plugins/datatypes/raw/RawDataTypeServerPlugin.class" />
 		</jar>
-		
+
 		<!-- plugins.datatype-json -->
 		<mkdir dir="${plugins.datatype-json}" />
 		<copy todir="${plugins.datatype-json}">
@@ -608,7 +608,7 @@
 		<jar destfile="${plugins.datatype-json}/datatype-json-server.jar" basedir="${classes}">
 			<include name="com/mirth/connect/plugins/datatypes/json/JSONDataTypeServerPlugin.class" />
 		</jar>
-		
+
 		<!-- plugins.directoryresource -->
 		<mkdir dir="${plugins.directoryresource}" />
 		<copy todir="${plugins.directoryresource}">
@@ -628,7 +628,7 @@
 			<exclude name="com/mirth/connect/plugins/directoryresource/DirectoryResourceProperties.class" />
 			<exclude name="com/mirth/connect/plugins/directoryresource/DirectoryResourceServletInterface.class" />
 		</jar>
-		
+
 		<!-- plugins.dashboardstatus -->
 		<mkdir dir="${plugins.dashboardstatus}" />
 		<copy todir="${plugins.dashboardstatus}">
@@ -648,7 +648,7 @@
 			<exclude name="com/mirth/connect/plugins/dashboardstatus/ConnectionLogItem.class" />
 			<exclude name="com/mirth/connect/plugins/dashboardstatus/DashboardConnectorStatusServletInterface.class" />
 		</jar>
-		
+
 		<!-- plugins.destinationsetfilter -->
 		<mkdir dir="${plugins.destinationsetfilter}" />
 		<copy todir="${plugins.destinationsetfilter}">
@@ -675,7 +675,7 @@
 		<copy todir="${plugins.dicomviewer}/lib" failonerror="false" quiet="true">
 			<fileset dir="${lib.extensions}/dicomviewer" />
 		</copy>
-		
+
 		<!-- plugins.globalmapviewer -->
 		<mkdir dir="${plugins.globalmapviewer}" />
 		<copy todir="${plugins.globalmapviewer}">
@@ -693,7 +693,7 @@
 			<include name="com/mirth/connect/plugins/globalmapviewer/**" />
 			<exclude name="com/mirth/connect/plugins/globalmapviewer/GlobalMapServletInterface.class" />
 		</jar>
-		
+
 		<!-- plugins.httpauth -->
 		<mkdir dir="${plugins.httpauth}" />
 		<copy todir="${plugins.httpauth}">
@@ -711,7 +711,7 @@
 			<include name="com/mirth/connect/plugins/httpauth/basic/BasicHttpAuthProperties.class" />
 			<include name="com/mirth/connect/plugins/httpauth/digest/DigestHttpAuthProperties.class" />
 			<include name="com/mirth/connect/plugins/httpauth/digest/DigestHttpAuthProperties$Algorithm.class" />
-			<include name="com/mirth/connect/plugins/httpauth/digest/DigestHttpAuthProperties$QOPMode.class" />				
+			<include name="com/mirth/connect/plugins/httpauth/digest/DigestHttpAuthProperties$QOPMode.class" />
 			<include name="com/mirth/connect/plugins/httpauth/custom/CustomHttpAuthProperties.class" />
 			<include name="com/mirth/connect/plugins/httpauth/javascript/JavaScriptHttpAuthProperties.class" />
 			<include name="com/mirth/connect/plugins/httpauth/oauth2/OAuth2HttpAuthProperties.class" />
@@ -980,11 +980,11 @@
 				<exclude name="Thumbs.db" />
 			</fileset>
 		</copy>
-		
+
 		<replace dir="${setup.public_html}" token="@mirthversion" value="${version}">
 			<include name="*.html" />
 		</replace>
-		
+
 		<!-- copy Swagger UI files -->
 		<copy todir="${setup.public_api_html}">
 			<fileset dir="${public_api_html}">
@@ -1039,7 +1039,7 @@
 				<attribute name="Class-Path" value="server-lib/commons/commons-io-2.13.0.jar server-lib/commons/commons-configuration2-2.8.0.jar server-lib/commons/commons-lang3-3.13.0.jar server-lib/commons/commons-logging-1.2.jar server-lib/commons/commons-beanutils-1.9.4.jar server-lib/commons/commons-text-1.10.0.jar server-lib/commons/commons-collections-3.2.2.jar conf/" />
 			</manifest>
 		</jar>
-		
+
 		<!-- create the userutil-sources jar -->
 		<jar destfile="${setup.client.lib}/${userutil-sources.jar}" basedir="${src}">
 			<include name="com/mirth/connect/userutil/**.java" />
@@ -1051,7 +1051,7 @@
 		<delete>
 			<fileset dir="${setup}" includes="**/.svn" />
 		</delete>
-		
+
 		<taskdef resource="net/sf/antcontrib/antlib.xml" classpathref="classpath" />
 
 
@@ -1161,7 +1161,7 @@
 		<zip destfile="${dist.extensions}/js-${version}.zip" basedir="${extensions}" includes="js/**/*" />
 		<zip destfile="${dist.extensions}/ws-${version}.zip" basedir="${extensions}" includes="ws/**/*" />
 		<zip destfile="${dist.extensions}/vm-${version}.zip" basedir="${extensions}" includes="vm/**/*" />
-		
+
 		<zip destfile="${dist.extensions}/datatype-delimited-${version}.zip" basedir="${extensions}" includes="datatype-delimited/**/*" />
 		<zip destfile="${dist.extensions}/datatype-dicom-${version}.zip" basedir="${extensions}" includes="datatype-dicom/**/*" />
 		<zip destfile="${dist.extensions}/datatype-edi-${version}.zip" basedir="${extensions}" includes="datatype-edi/**/*" />
@@ -1194,7 +1194,7 @@
 	<target name="create-dist" depends="create-extension-zips">
 		<mkdir dir="${dist}" />
 	</target>
-	
+
 	<target name="create-javadocs" depends="init">
 		<mkdir dir="${docs.javadocs}" />
 		
@@ -1247,36 +1247,66 @@
 			</classpath>
 		</java>
 	</target>
-	
+
 	<target name="test-init" depends="init">
 		<delete dir="${test_classes}" />
-		
+
 		<path id="testclasspath">
 			<fileset dir="testlib" includes="**/*.jar" />
 			<dirset dir="${classes}"/>
 			<path refid="classpath" />
 		</path>
 	</target>
-	
+
 	<target name="test-compile" depends="test-init">
 		<!-- compile the source -->
 		<mkdir dir="${test_classes}" />
-		
+
 		<javac srcdir="${test}" destdir="${test_classes}" debug="on" includeAntRuntime="false">
 			<classpath refid="testclasspath" />
 			<compilerarg value="--add-modules=java.sql.rowset" />
 			<compilerarg value="--add-exports=java.sql.rowset/com.sun.rowset=ALL-UNNAMED" />
 			<compilerarg value="--add-exports=java.base/com.sun.crypto.provider=ALL-UNNAMED" />
 			<compilerarg value="--add-exports=java.base/sun.security.provider=ALL-UNNAMED" />
+			<compilerarg value="--add-opens" />
+			<compilerarg value="java.base/java.lang=ALL-UNNAMED" />
+			<compilerarg value="--add-opens" />
+			<compilerarg value="java.base/java.lang.reflect=ALL-UNNAMED" />
+			<compilerarg value="--add-opens" />
+			<compilerarg value="java.base/java.math=ALL-UNNAMED" />
+			<compilerarg value="--add-opens" />
+			<compilerarg value="java.base/java.net=ALL-UNNAMED" />
+			<compilerarg value="--add-opens" />
+			<compilerarg value="java.base/java.security=ALL-UNNAMED" />
+			<compilerarg value="--add-opens" />
+			<compilerarg value="java.base/java.security.cert=ALL-UNNAMED" />
+			<compilerarg value="--add-opens" />
+			<compilerarg value="java.base/java.text=ALL-UNNAMED" />
+			<compilerarg value="--add-opens" />
+			<compilerarg value="java.base/java.util=ALL-UNNAMED" />
+			<compilerarg value="--add-opens" />
+			<compilerarg value="java.base/sun.security.pkcs=ALL-UNNAMED" />
+			<compilerarg value="--add-opens" />
+			<compilerarg value="java.base/sun.security.rsa=ALL-UNNAMED" />
+			<compilerarg value="--add-opens" />
+			<compilerarg value="java.base/sun.security.x509=ALL-UNNAMED" />
+			<compilerarg value="--add-opens" />
+			<compilerarg value="java.desktop/java.awt=ALL-UNNAMED" />
+			<compilerarg value="--add-opens" />
+			<compilerarg value="java.desktop/java.awt.color=ALL-UNNAMED" />
+			<compilerarg value="--add-opens" />
+			<compilerarg value="java.desktop/java.awt.font=ALL-UNNAMED" />
+			<compilerarg value="--add-opens" />
+			<compilerarg value="java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED" />
 		</javac>
-		
+
 		<copy todir="${test_classes}">
 			<fileset dir="${test}">
 				<include name="**/*.xml" />
 				<include name="**/*.json" />
 			</fileset>
 		</copy>
-		
+
 		<jar destfile="${test.dist}/${tests.jar}" basedir="${test_classes}">
 			<include name="**/*" />
 		</jar>
@@ -1330,6 +1360,8 @@
 				<jvmarg value="--add-opens=java.sql.rowset/com.sun.rowset.providers=ALL-UNNAMED"/>
 				<jvmarg value="--add-opens=java.sql.rowset/javax.sql.rowset=ALL-UNNAMED"/>
 				<jvmarg value="--add-opens=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED" />
+				<jvmarg value="--add-opens=java.base/sun.misc=ALL-UNNAMED"/>
+				<jvmarg value="--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"/>
 				<classpath>
 					<path refid="testclasspath" />
 					<dirset dir="${test_classes}"/>
@@ -1351,7 +1383,7 @@
 			<report format="frames" todir="${junit-html}" />
 		</junitreport>
 	</target>
-	
+
 	<target name="remove-classes" depends="init">
 		<!-- delete the compiled classes folder -->
 		<delete dir="${classes}" />
